# mail-custodian

./: .gitignore  .python-version  README.md  README_GMAIL.md  config.example.yaml  pyproject.toml
email_organizer/: __main__.py  models.py
mail_custodian/: __main__.py  config.py  engine.py  gmail_oauth.py  imap_client.py  mailer.py  models.py  state.py
tests/: test_config.py  test_engine.py  test_gmail_oauth.py  test_imap.py  test_main.py  test_rules.py  test_state.py
