[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-organizer"
version = "0.1.0"
description = "Cron-friendly IMAP email filtering with YAML configuration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
email-organizer = "email_organizer.__main__:main"

[tool.setuptools.packages.find]
include = ["email_organizer*"]
