[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-custodian"
version = "0.1.0"
description = "Cron-friendly IMAP email filtering with YAML configuration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
mail-custodian = "mail_custodian.__main__:main"

[tool.setuptools.packages.find]
include = ["mail_custodian*"]
